// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED BY MIXGEN.

syntax = "proto3";



//
// input template
package checkproducer;


import "gogoproto/gogo.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";
import "google/protobuf/any.proto";
import "mixer/adapter/model/v1beta1/check.proto";


option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_CHECK_WITH_OUTPUT;
option (istio.mixer.adapter.model.v1beta1.template_name) = "checkproducer";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stable_marshaler_all) = true;

// HandleCheckProducerService is implemented by backends that wants to handle request-time 'checkproducer' instances.
service HandleCheckProducerService {
    // HandleCheckProducer is called by Mixer at request-time to deliver 'checkproducer' instances to the backend.
    rpc HandleCheckProducer(HandleCheckProducerRequest) returns (HandleCheckProducerResponse);
    
}

// Request message for HandleCheckProducer method.
message HandleCheckProducerRequest {

    // 'checkproducer' instance.
    InstanceMsg instance = 1;

    // Adapter specific handler configuration.
    //
    // Note: Backends can also implement [InfrastructureBackend][https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html#InfrastructureBackend]
    // service and therefore opt to receive handler configuration during session creation through [InfrastructureBackend.CreateSession][TODO: Link to this fragment]
    // call. In that case, adapter_config will have type_url as 'google.protobuf.Any.type_url' and would contain string
    // value of session_id (returned from InfrastructureBackend.CreateSession).
    google.protobuf.Any adapter_config = 2;

    // Id to dedupe identical requests from Mixer.
    string dedup_id = 3;
}

message HandleCheckProducerResponse {
    istio.mixer.adapter.model.v1beta1.CheckResult result = 1;
    OutputMsg output = 2;
}

// Contains output payload for 'checkproducer' template.
message OutputMsg {
    
    
    int64 int64Primitive = 1;
    
    
    bool boolPrimitive = 2;
    
    
    double doublePrimitive = 3;
    
    
    string stringPrimitive = 4;
    
    
    map<string, string> stringMap = 5;
    
}

// Contains instance payload for 'checkproducer' template. This is passed to infrastructure backends during request-time
// through HandleCheckProducerService.HandleCheckProducer.
message InstanceMsg {

    // Name of the instance as specified in configuration.
    string name = 72295727;
    
    
    string stringPrimitive = 4;
    
}

// Contains inferred type information about specific instance of 'checkproducer' template. This is passed to
// infrastructure backends during configuration-time through [InfrastructureBackend.CreateSession][TODO: Link to this fragment].
message Type {
    
}


// Represents instance configuration schema for 'checkproducer' template.
message InstanceParam {
    
    
    string stringPrimitive = 4;
    
}

